--- a/src/shared/ui/Button/Button.css
+++ b/src/shared/ui/Button/Button.css
@@ -1,7 +1,7 @@
-.buttonStyle{
+/* .buttonStyle{
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     margin: 0;
-}
+} */
