--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -25,5 +25,6 @@
 .backgroundMainPage{
     display: flex;
     justify-content: center;
-    background-color: black;
+    align-items: center;
+    width: 250px;
 }
