--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,26 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(233, 225, 221, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --color-1: #f3fae10a;
+  --color-2: #5684b6;
+  --color-3: rgba(255, 89, 0, 0.551);
+  --color-4: #d0d6c0;
+}
+
+#root {
+  border-top: solid 50px rgb(48, 47, 47);
+  border-bottom: solid 50px rgb(48, 47, 47);
+  min-width: 100vw;
+  min-height: 89.5vh;
+  display: flex;
 }
 
 a {
@@ -26,7 +39,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
 }
 
